Code/syntax.output
State 29 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: %empty
   15       | ID

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: %empty
   29         | Stmt StmtList

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI

   37 DefList: %empty
   38        | Def DefList

   39 Def: Specifier DecList SEMI
   40    | error SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | LP error RP
   64    | ID LP error RP
   65    | Exp LB error RB

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 19 22 27 36 40 63 64 65
    SEMI <node> (258) 4 5 7 30 32 36 39 40
    COMMA <node> (259) 9 23 42 66
    ASSIGNOP <node> (260) 44 45
    RELOP <node> (261) 48
    PLUS <node> (262) 49
    MINUS <node> (263) 50 54
    STAR <node> (264) 51
    DIV <node> (265) 52
    AND <node> (266) 46
    OR <node> (267) 47
    DOT <node> (268) 59
    NOT <node> (269) 55
    TYPE <node> (270) 10
    LP <node> (271) 20 21 33 34 35 53 56 57 63 64
    RP <node> (272) 20 21 22 33 34 35 53 56 57 63 64
    LB <node> (273) 18 58 65
    RB <node> (274) 18 19 58 65
    LC <node> (275) 12 26
    RC <node> (276) 12 26 27
    STRUCT <node> (277) 12 13
    RETURN <node> (278) 32
    IF <node> (279) 33 34
    ELSE <node> (280) 34
    WHILE <node> (281) 35
    INT <node> (282) 18 61
    FLOAT <node> (283) 62
    ID <node> (284) 15 16 17 20 21 56 57 59 60 64
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 3
    ExtDef <node> (35)
        on left: 4 5 6 7
        on right: 3
    ExtDecList <node> (36)
        on left: 8 9
        on right: 4 9
    Specifier <node> (37)
        on left: 10 11
        on right: 4 5 6 25 39
    StructSpecifier <node> (38)
        on left: 12 13
        on right: 11
    OptTag <node> (39)
        on left: 14 15
        on right: 12
    Tag <node> (40)
        on left: 16
        on right: 13
    VarDec <node> (41)
        on left: 17 18 19
        on right: 8 9 18 25 43 44
    FunDec <node> (42)
        on left: 20 21 22
        on right: 6
    VarList <node> (43)
        on left: 23 24
        on right: 20 23
    ParamDec <node> (44)
        on left: 25
        on right: 23 24
    CompSt <node> (45)
        on left: 26 27
        on right: 6 31
    StmtList <node> (46)
        on left: 28 29
        on right: 26 29
    Stmt <node> (47)
        on left: 30 31 32 33 34 35 36
        on right: 29 33 34 35
    DefList <node> (48)
        on left: 37 38
        on right: 12 26 38
    Def <node> (49)
        on left: 39 40
        on right: 38
    DecList <node> (50)
        on left: 41 42
        on right: 39 42
    Dec <node> (51)
        on left: 43 44
        on right: 41 42
    Exp <node> (52)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 30 32 33 34 35 44 45 46 47 48 49 50 51 52 53 54 55 58 59 65 66 67
    Args <node> (53)
        on left: 66 67
        on right: 56 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   19 VarDec: error . RB
   22 FunDec: error . RP

    RP  shift, and go to state 22
    RB  shift, and go to state 23


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 17 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 37 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


State 23

   19 VarDec: error RB .

    $default  reduce using rule 19 (VarDec)


State 24

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 39
    ID     shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 19


State 27

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 42


State 28

   27 CompSt: error . RC

    RC  shift, and go to state 43


State 29

   26 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 37 (DefList)]
    MINUS   reduce using rule 37 (DefList)
    NOT     reduce using rule 37 (DefList)
    LP      reduce using rule 37 (DefList)
    LC      reduce using rule 37 (DefList)
    RC      reduce using rule 37 (DefList)
    RETURN  reduce using rule 37 (DefList)
    IF      reduce using rule 37 (DefList)
    WHILE   reduce using rule 37 (DefList)
    INT     reduce using rule 37 (DefList)
    FLOAT   reduce using rule 37 (DefList)
    ID      reduce using rule 37 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 34


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   40 Def: error . SEMI

    SEMI  shift, and go to state 45


State 32

   39 Def: Specifier . DecList SEMI

    error  shift, and go to state 39
    ID     shift, and go to state 40

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 33

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


State 34

   38 DefList: Def . DefList

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 37 (DefList)]
    MINUS   reduce using rule 37 (DefList)
    NOT     reduce using rule 37 (DefList)
    LP      reduce using rule 37 (DefList)
    LC      reduce using rule 37 (DefList)
    RC      reduce using rule 37 (DefList)
    RETURN  reduce using rule 37 (DefList)
    IF      reduce using rule 37 (DefList)
    WHILE   reduce using rule 37 (DefList)
    INT     reduce using rule 37 (DefList)
    FLOAT   reduce using rule 37 (DefList)
    ID      reduce using rule 37 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 34


State 35

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 36

   25 ParamDec: Specifier . VarDec

    error  shift, and go to state 39
    ID     shift, and go to state 40

    VarDec  go to state 51


State 37

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 38

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 24 (VarList)


State 39

   19 VarDec: error . RB

    RB  shift, and go to state 23


State 40

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 41

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 42

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 54


State 43

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 44

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 29
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 45

   40 Def: error SEMI .

    $default  reduce using rule 40 (Def)


State 46

   18 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 27

    $default  reduce using rule 43 (Dec)


State 47

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 70


State 48

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 41 (DecList)


State 49

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 50

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 51

   18 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 25 (ParamDec)


State 52

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 53

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 38


State 54

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 55

   27 CompSt: error . RC
   36 Stmt: error . SEMI

    SEMI  shift, and go to state 73
    RC    shift, and go to state 43


State 56

   54 Exp: MINUS . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 74


State 57

   55 Exp: NOT . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 75


State 58

   53 Exp: LP . Exp RP
   63    | LP . error RP

    error  shift, and go to state 76
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 77


State 59

   32 Stmt: RETURN . Exp SEMI

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 78


State 60

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 61

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 62

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 63

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 64

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .
   64    | ID . LP error RP

    LP  shift, and go to state 81

    $default  reduce using rule 60 (Exp)


State 65

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 66

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 67

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 29
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    INT     shift, and go to state 62
    FLOAT   shift, and go to state 63
    ID      shift, and go to state 64

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 83
    Stmt      go to state 67
    Exp       go to state 68


State 68

   30 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 69

   44 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 95


State 70

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 71

   42 DecList: Dec COMMA . DecList

    error  shift, and go to state 39
    ID     shift, and go to state 40

    VarDec   go to state 46
    DecList  go to state 96
    Dec      go to state 48


State 72

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 73

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 74

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 54 (Exp)


State 75

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 55 (Exp)


State 76

   63 Exp: LP error . RP

    RP  shift, and go to state 97


State 77

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 98
    LB        shift, and go to state 94


State 78

   32 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 79

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 100


State 80

   35 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 101


State 81

   56 Exp: ID LP . Args RP
   57    | ID LP . RP
   64    | ID LP . error RP

    error  shift, and go to state 102
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 103
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp   go to state 104
    Args  go to state 105


State 82

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 83

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 84

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 85

   45 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 106


State 86

   48 Exp: Exp RELOP . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 107


State 87

   49 Exp: Exp PLUS . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 108


State 88

   50 Exp: Exp MINUS . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 109


State 89

   51 Exp: Exp STAR . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 110


State 90

   52 Exp: Exp DIV . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 111


State 91

   46 Exp: Exp AND . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 112


State 92

   47 Exp: Exp OR . Exp

    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 113


State 93

   59 Exp: Exp DOT . ID

    ID  shift, and go to state 114


State 94

   58 Exp: Exp LB . Exp RB
   65    | Exp LB . error RB

    error  shift, and go to state 115
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    INT    shift, and go to state 62
    FLOAT  shift, and go to state 63
    ID     shift, and go to state 64

    Exp  go to state 116


State 95

   44 Dec: VarDec ASSIGNOP Exp .
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 44 (Dec)


State 96

   42 DecList: Dec COMMA DecList .

    $default  reduce using rule 42 (DecList)


State 97

   63 Exp: LP error RP .

    $default  reduce using rule 63 (Exp)


State 98

   53 Exp: LP Exp RP .

    $default  reduce using rule 53 (Exp)


State 99

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 100

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 117
    LB        shift, and go to state 94


State 101

   35 Stmt: WHILE LP Exp . RP Stmt
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 118
    LB        shift, and go to state 94


State 102

   64 Exp: ID LP error . RP

    RP  shift, and go to state 119


State 103

   57 Exp: ID LP RP .

    $default  reduce using rule 57 (Exp)


State 104

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB
   66 Args: Exp . COMMA Args
   67     | Exp .

    COMMA     shift, and go to state 120
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 67 (Args)


State 105

   56 Exp: ID LP Args . RP

    RP  shift, and go to state 121


State 106

   45 Exp: Exp . ASSIGNOP Exp
   45    | Exp ASSIGNOP Exp .
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 45 (Exp)


State 107

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   48    | Exp RELOP Exp .
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    STAR   shift, and go to state 89
    DIV    shift, and go to state 90
    DOT    shift, and go to state 93
    LB     shift, and go to state 94

    $default  reduce using rule 48 (Exp)


State 108

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   49    | Exp PLUS Exp .
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 93
    LB    shift, and go to state 94

    $default  reduce using rule 49 (Exp)


State 109

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   50    | Exp MINUS Exp .
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 93
    LB    shift, and go to state 94

    $default  reduce using rule 50 (Exp)


State 110

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   51    | Exp STAR Exp .
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   65    | Exp . LB error RB

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 51 (Exp)


State 111
